--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@angular/platform-browser-dynamic": "~7.1.4",
     "@angular/router": "~7.1.4",
     "@ionic-native/core": "5.0.0-beta.21",
+    "@ionic-native/file": "^5.0.0",
+    "@ionic-native/screenshot": "^5.12.0",
+    "@ionic-native/social-sharing": "^5.13.0",
     "@ionic-native/splash-screen": "5.0.0-beta.21",
     "@ionic-native/status-bar": "5.0.0-beta.21",
     "@ionic/angular": "4.0.0-rc.0",
